<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background_main"
    tools:context="nineBoxQuestions.QuestionsEntryActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_question_intro"
            android:textColor="@color/text_light"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditQuestionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="@string/edit_question_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/text_light"></EditText>

        <TextView
            android:id="@+id/WeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_weight_title"
            android:textColor="@color/text_light"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/WeightValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_weight_hint"
            android:inputType="number"
            android:textColor="@color/text_light"></EditText>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/x_axis_rb"
                style="@style/MyRadioButton"
                android:checked="true"
                android:text="@string/x_axis" />

            <RadioButton
                android:id="@+id/y_axis_rb"
                style="@style/MyRadioButton"
                android:checked="false"
                android:text="@string/y_axis" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/EditQuestionText"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/cancel_save_candidate"
                style="@style/MainButton"
                android:layout_below="@+id/cancel_button"
                android:background="@color/mutedbutton_color"
                android:onClick="CancelSave"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/save_candidate"
                style="@style/MainButton"
                android:layout_below="@+id/EditQuestionText"
                android:onClick="saveQuestion"
                android:text="@string/save_button" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>