<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluation_for_prompt"
            android:textSize="10pt" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="28dp"
            android:layout_height="35dp"></LinearLayout>

        <TextView
            android:id="@+id/evalCandidateName"
            android:layout_width="217dp"
            android:layout_height="match_parent"
            android:inputType="none|textPersonName"
            android:textSize="@dimen/text_size_big" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@color/divider">

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_main">

        <TextView
            android:id="@+id/question_x_of_x_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_x_of_x_prompt"
            android:textSize="10pt"
            android:padding="@dimen/text_padding" />

        <TextView
            android:id="@+id/curr_question_no"
            android:layout_width="40dp"
            android:layout_height="31dp"
            android:inputType="none|textPersonName"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding" />

        <TextView
            android:id="@+id/question_x_of_x_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_x_of_x_of"
            android:textSize="10pt"
            android:padding="@dimen/text_padding" />
        <TextView
            android:id="@+id/max_question_no"
            android:layout_width="40dp"
            android:layout_height="31dp"
            android:inputType="none|textPersonName"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center|fill_horizontal|fill|fill_vertical|top">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:layout_margin="@dimen/text_margin"
            android:gravity="center|fill_horizontal|center_vertical|fill_vertical"
            android:padding="@dimen/text_padding"
            android:textSize="@dimen/text_size_big"
            android:layout_gravity="top"
            />

        <SeekBar
            android:id="@+id/responseSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:max="@integer/maxResponse"
            android:padding="@dimen/text_padding"
            />
        -->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.30">

        <Button style="@style/MainButton"
            android:id="@+id/next_question_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/next_question_button"
            android:background="@color/background_secondary" />

    </LinearLayout>

    <LinearLayout style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button style="@style/MainButton"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cancel"
            android:background="@color/background_secondary" />

        <Button style="@style/MainButton"
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/done_button"
            android:background="@color/background_secondary" />
    </LinearLayout>

</LinearLayout>