<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".MainActivity"

    android:weightSum="1">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <RelativeLayout
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/abc_action_bar_default_height_material"
        android:layout_margin="@dimen/margin_medium">

        <ImageView
            android:id="@+id/button_add_people"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/add_people_image" />

        <TextView
            android:id="@+id/card_title"
            style="@style/MainButtonText"
            android:layout_alignBottom="@+id/button_add_people"
            android:text="@string/add_people_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/abc_action_bar_default_height_material"
        android:layout_margin="@dimen/margin_medium">

        <ImageView
            android:id="@+id/button_set_questions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/evaluate_image" />

        <TextView
            android:id="@+id/eval_card_title"
            style="@style/MainButtonText"
            android:layout_alignBottom="@+id/button_set_questions"
            android:text="@string/evaluate_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/abc_action_bar_default_height_material"
        android:layout_margin="@dimen/margin_medium">

        <ImageView
            android:id="@+id/button_see_results"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/reports_image" />

        <TextView
            android:id="@+id/reprts_card_title"
            style="@style/MainButtonText"
            android:layout_alignBottom="@+id/button_see_results"
            android:text="@string/reports_title" />

    </RelativeLayout>

</LinearLayout>