<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCandidate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context="nineBoxCandidates.CandidatesEntryActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:weightSum="5">

        <android.support.v7.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/background_main"
            android:elevation="@dimen/global_elevation"
            android:orientation="vertical"
            card_view:cardBackgroundColor="@color/background_main">
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/EditTextName_layout"
                    style="@style/TextLabel"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EditTextName"
                        style="@style/EditTextStyle"
                        android:hint="@string/edit_candidate_hint"
                        android:inputType="textPersonName"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/NotesText_layout"
                    style="@style/TextLabel"
                    android:layout_below="@+id/EditTextName_layout"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/NotesText"
                        style="@style/EditTextStyle"
                        android:hint="@string/edit_candidate_notes_hint"></EditText>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:orientation="vertical"></LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/bottom_card"
            android:layout_weight="3"
            android:background="@color/background_light"
            android:orientation="vertical">

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/EditCandidates_Initials_layout"-->
            <!--style="@style/TextLabel"-->
            <!--android:theme="@style/TextLabel">-->

            <!--<EditText-->
            <!--android:id="@+id/EditCandidateInitials"-->
            <!--style="@style/EditTextStyle"-->
            <!--android:hint="@string/edit_candidate_initials_hint"-->
            <!--android:inputType="textPersonName"></EditText>-->
            <!--</android.support.design.widget.TextInputLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|left"
                    android:layout_weight="1"
                    android:src="@drawable/ic_initials" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/margin_large">

                    <TextView
                        style="@style/details_text_main"
                        android:text="@string/edit_candidate_initials_label" />

                    <TextView
                        android:id="@+id/candidate_initials"
                        style="@style/details_text_sub" />
                </LinearLayout>

                <Button
                    android:id="@+id/edit_candidate_initials"
                    style="@style/details_edit_button"
                    android:layout_weight="3"
                    android:layout_gravity="bottom"
                    android:text="edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|left"
                    android:layout_weight="1"
                    android:src="@drawable/ic_paintbrush" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/margin_large">

                    <TextView
                        style="@style/details_text_main"
                        android:text="@string/edit_candidate_color_label" />

                    <TextView
                        android:id="@+id/candidate_color"
                        android:text="Dark Blue"
                        style="@style/details_text_sub" />
                </LinearLayout>

                <Button
                    android:id="@+id/edit_candidate_colors"
                    style="@style/details_edit_button"
                    android:layout_gravity="bottom"
                    android:layout_weight="3"
                    android:text="edit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|left"
                    android:layout_weight="1"
                    android:src="@drawable/ic_palette_black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/margin_large">

                    <TextView
                        style="@style/details_text_main"
                        android:text="@string/edit_candidate_icon_label" />

                </LinearLayout>
                <View
                    android:id="@+id/current_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="right"/>

            </LinearLayout>

            <!--<Spinner-->
                <!--android:id="@+id/spinner_widget"-->
                <!--style="@style/mySpinnerItemStyle"-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:popupTheme="@android:style/ThemeOverlay.Material.Light" />-->

            <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="top|center"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:padding="8dp"-->
                    <!--android:text="@string/edit_candidate_icon_label"-->
                    <!--android:textColor="@color/text_light"-->
                    <!--android:textSize="@dimen/text_size" />-->


            <!--</LinearLayout>-->

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center|bottom">

                <Button
                    android:id="@+id/cancel_save_candidate"
                    style="@style/MainButton"
                    android:layout_below="@+id/cancel_button"
                    android:background="@color/mutedbutton_color"
                    android:text="@string/cancel_button" />

                <Button
                    android:id="@+id/save_candidate"
                    style="@style/MainButton"
                    android:layout_below="@+id/EditTextName"
                    android:text="@string/save_button" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
